webapp/1-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: xentrail-v2
spec: {}
status: {}
