webapp/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xentrail-webapp
  namespace: xentrail-v1
  labels:
    app: xentrail-webapp
spec:
  selector:
    app: xentrail-webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
